cmake_minimum_required (VERSION 2.6)
project (libcef_dll_wrapper)

set(SOURCE 
	transfer_util.cpp 
	wrapper/cef_byte_read_handler.cc
	wrapper/cef_stream_resource_handler.cc
	wrapper/cef_xml_object.cc
	wrapper/cef_zip_archive.cc
	wrapper/libcef_dll_wrapper.cc
	wrapper/libcef_dll_wrapper2.cc
	cpptoc/drag_handler_cpptoc.cc
	cpptoc/completion_handler_cpptoc.cc
	cpptoc/app_cpptoc.cc
	cpptoc/browser_process_handler_cpptoc.cc
	cpptoc/client_cpptoc.cc
	cpptoc/context_menu_handler_cpptoc.cc
	cpptoc/cookie_visitor_cpptoc.cc
	cpptoc/dialog_handler_cpptoc.cc
	cpptoc/display_handler_cpptoc.cc
	cpptoc/domevent_listener_cpptoc.cc
	cpptoc/domvisitor_cpptoc.cc
	cpptoc/download_handler_cpptoc.cc
	cpptoc/focus_handler_cpptoc.cc
	cpptoc/geolocation_handler_cpptoc.cc
	cpptoc/get_geolocation_callback_cpptoc.cc
	cpptoc/jsdialog_handler_cpptoc.cc
	cpptoc/keyboard_handler_cpptoc.cc
	cpptoc/life_span_handler_cpptoc.cc
	cpptoc/load_handler_cpptoc.cc
	cpptoc/read_handler_cpptoc.cc
	cpptoc/render_handler_cpptoc.cc
	cpptoc/render_process_handler_cpptoc.cc
	cpptoc/request_handler_cpptoc.cc
	cpptoc/resource_bundle_handler_cpptoc.cc
	cpptoc/resource_handler_cpptoc.cc
	cpptoc/run_file_dialog_callback_cpptoc.cc
	cpptoc/scheme_handler_factory_cpptoc.cc
	cpptoc/string_visitor_cpptoc.cc
	cpptoc/task_cpptoc.cc
	cpptoc/trace_client_cpptoc.cc
	cpptoc/urlrequest_client_cpptoc.cc
	cpptoc/v8accessor_cpptoc.cc
	cpptoc/v8handler_cpptoc.cc
	cpptoc/web_plugin_info_visitor_cpptoc.cc
	cpptoc/web_plugin_unstable_callback_cpptoc.cc
	cpptoc/write_handler_cpptoc.cc
	ctocpp/drag_data_ctocpp.cc
	ctocpp/allow_certificate_error_callback_ctocpp.cc
	ctocpp/auth_callback_ctocpp.cc
	ctocpp/before_download_callback_ctocpp.cc
	ctocpp/binary_value_ctocpp.cc
	ctocpp/browser_ctocpp.cc
	ctocpp/browser_host_ctocpp.cc
	ctocpp/callback_ctocpp.cc
	ctocpp/command_line_ctocpp.cc
	ctocpp/context_menu_params_ctocpp.cc
	ctocpp/cookie_manager_ctocpp.cc
	ctocpp/dictionary_value_ctocpp.cc
	ctocpp/domdocument_ctocpp.cc
	ctocpp/domevent_ctocpp.cc
	ctocpp/domnode_ctocpp.cc
	ctocpp/download_item_ctocpp.cc
	ctocpp/download_item_callback_ctocpp.cc
	ctocpp/file_dialog_callback_ctocpp.cc
	ctocpp/frame_ctocpp.cc
	ctocpp/geolocation_callback_ctocpp.cc
	ctocpp/jsdialog_callback_ctocpp.cc
	ctocpp/list_value_ctocpp.cc
	ctocpp/menu_model_ctocpp.cc
	ctocpp/post_data_ctocpp.cc
	ctocpp/post_data_element_ctocpp.cc
	ctocpp/process_message_ctocpp.cc
	ctocpp/quota_callback_ctocpp.cc
	ctocpp/request_ctocpp.cc
	ctocpp/response_ctocpp.cc
	ctocpp/scheme_registrar_ctocpp.cc
	ctocpp/stream_reader_ctocpp.cc
	ctocpp/stream_writer_ctocpp.cc
	ctocpp/task_runner_ctocpp.cc
	ctocpp/urlrequest_ctocpp.cc
	ctocpp/v8context_ctocpp.cc
	ctocpp/v8exception_ctocpp.cc
	ctocpp/v8stack_frame_ctocpp.cc
	ctocpp/v8stack_trace_ctocpp.cc
	ctocpp/v8value_ctocpp.cc
	ctocpp/web_plugin_info_ctocpp.cc
	ctocpp/xml_reader_ctocpp.cc
	ctocpp/zip_reader_ctocpp.cc
)
include_directories(../. 
	/usr/include/gtk-2.0 
	/usr/include/pango-1.0 
	/usr/include/glib-2.0 
	/usr/lib/glib-2.0/include 
	/usr/lib/gtk-2.0/include 
	/usr/lib/i386-linux-gnu/glib-2.0/include 
	/usr/lib/i386-linux-gnu/gtk-2.0/include
	/usr/include/gdk-pixbuf-2.0
	/usr/include/atk-1.0
	/usr/include/cairo)

add_definitions(-DUSING_CEF_SHARED)
add_library(cef_dll_wrapper ${SOURCE})

